# cpp_project_template

./: .clang-format  .cmake-format.yaml  CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
catch2_test/: CMakeLists.txt
cmake/: Cache.cmake  CompilerWarnings.cmake  Conan.cmake  Constants.cmake  Doxygen.cmake  LinkTimeOptimization.cmake  PrecompileHeaders.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake  TimeTrace.cmake  UnityBuild.cmake
dependencies/: CMakeLists.txt
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
gtest_test/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/fltk/: CMakeLists.txt  test_fltk.cpp
src/gtkmm/: CMakeLists.txt  hello_world.cpp  hello_world.hpp  main.cpp
src/imgui/: CMakeLists.txt  test.cpp
src/nana/: CMakeLists.txt
src/qt/: CMakeLists.txt  HelloQt.cpp  HelloQt.hpp  qtMain.cpp
src/sdl/: CMakeLists.txt
test/: CMakeLists.txt
